--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1>Hello world</h1>    
+    <h1>Hello world</h1> 
+    
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
