--- a/public/index.html
+++ b/public/index.html
@@ -3,56 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Test Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Join | Chat App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="/css/styles.css" rel="stylesheet"/>
 </head>
-<body class="chat">
-    <div class="chat__sidebar">
-        <h3>People</h3>
-        <div id="users"></div>
+<body class="centered-form">
+    <div class="centered-form__form">
+        <form action="/chat.html">
+            <div class="form-field">
+                <h3>Join</h3>
+            </div>
+            <div class="form-field">
+                <label>Display Name</label>
+                <input type="text" name="name" autofocus/>
+            </div>
+            <div class="form-field">
+                <label>Room Name</label>
+                <input type="text" name="room"/>
+            </div>
+            <div class="form-field">
+                <button>Join</button>
+            </div>
+        </form>
     </div>
-
-    <div class="chat__main">
-        <ol id="messages" class="chat__messages "></ol>
-
-        <div class="chat__footer">
-            <form id="message-form">
-                <input name="message" type="text" placeholder="Message " autofocus autocomplete="off"/>
-                <button type="submit">SEND</button>
-            </form>
-            <button id="send-location">SEND LOCATION</button>
-        </div>
-    </div>
-
-    <script id="message-template" type="text/template">
-        <li class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span>{{timestamp}}</span>
-            </div>
-            <div class="message__body">
-                <p>{{text}}</p>
-            </div>
-        </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-        <li class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span>{{timestamp}}</span>
-            </div>
-            <div class="message__body">
-                <p><a href="{{url}}" target="_blank">My current location</a></p>
-            </div>
-        </li>
-    </script>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/libs/jquery.min.js"></script>
-    <script src="/js/libs/mustache.js"></script>
-    <script src="/js/libs/moment.js"></script>
-    <script src="/js/index.js"></script>
 </body>
 </html>
